<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">
<item
    android:id="@+id/home"
    android:title="@string/home"
    android:icon="@drawable/bottom_btn1"
    app:cnb_iconColor="@color/white" />


    <item
        android:id="@+id/Board"
        android:title="@string/board"
        android:icon="@drawable/bottom_btn2"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"
        android:icon="@drawable/bottom_btn3"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/bottom_btn4"
        app:cnb_iconColor="@color/white"/>

</menu>